# turbogears_playground

./: .gitignore  README.md  hello.xhtml  mydatabase.db  requirements.txt  tgapp.py
wiki20/: commands  devdata.db  development.ini  pyproject.toml  setup.cfg  setup.py
wiki20/wiki20/config/: app_cfg.py
wiki20/wiki20/controllers/: error.py  root.py
wiki20/wiki20/model/: __init__.py  auth.py  page.py
wiki20/wiki20/templates/: edit.xhtml  index.xhtml  page.xhtml
wiki20/wiki20/tests/: __init__.py
wiki20/wiki20/tests/functional/: test_authentication.py  test_root.py
wiki20/wiki20/tests/models/: __init__.py  test_auth.py
wiki20/wiki20/websetup/: bootstrap.py
