# Quickstarted Options:
#
# sqlalchemy: True
# auth:       sqlalchemy
# mako:       False

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki20"
version = "0.1"
description = ""
authors = [
  { name = "chebishev", email = "atanas.chebishev@gmail.com" }
]
urls = { Homepage = "http://localhost" }
readme = { file = "README.rst", content-type = "text/x-rst" }
dependencies = [
  "TurboGears2 >= 2.5.0",
  "Beaker >= 1.8.0",
  "Kajiki >= 0.6.3",
  "zope.sqlalchemy >= 1.2",
  "sqlalchemy < 3.0",
  "alembic",
  "repoze.who",
  "WebHelpers2",
  "Babel > 2.12",
]

[project.optional-dependencies]
testing = [
  "WebTest >= 1.2.3",
  "pytest",
  "coverage",
  "gearbox"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
exclude = []

[tool.setuptools.package-data]
wiki20 = [
  "i18n/*/LC_MESSAGES/*.mo",
  "templates/*/*",
  "public/*/*"
]

[tool.babel]
domain = "wiki20"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"

[[tool.babel.mappings]]
method = "ignore"
pattern = "public/**"
[[tool.babel.mappings]]
method = "kajiki"
pattern = "templates/**.xhtml"

[tool.babel.mappings.options]
strip_text = false
extract_python = true

[project.entry-points."paste.app_factory"]
main = "wiki20.config.application:make_app"

[project.entry-points."gearbox.plugins"]
turbogears-devtools = "tg.devtools"
